force-app/main/default/objects/Job_Posting__c/fields/Job_Board__c.field-meta.xml
<CustomField>
    <fullName>Job_Board__c</fullName>
    <label>Job Board</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>