force-app/main/default/objects/Job_Posting__c/fields/Job_External_URL__c.field-meta.xml
<CustomField>
    <fullName>Job_External_URL__c</fullName>
    <label>Job External URL</label>
    <type>Url</type>
</CustomField>