force-app/main/default/objects/Job_Posting__c/fields/Job_Posting_ID__c.field-meta.xml
<CustomField>
    <fullName>Job_Posting_ID__c</fullName>
    <displayFormat>JP-{0000}</displayFormat>
    <label>Job Posting ID</label>
    <type>AutoNumber</type>
</CustomField>